# myway

./: Cargo.toml  build.rs  rustfmt.toml
myway-protogen/: Cargo.toml
myway-protogen/src/: build_tree.rs  codegen.rs  lib.rs  types.rs
src/: accept.rs  client.rs  epoll.rs  fds.rs  logger.rs  logging.rs  main.rs  object_impls.rs  object_map.rs  objects.rs  protocol.rs  shm.rs  signals.rs  socket_server.rs  windows.rs
src/client/: mod.rs  recv.rs  send.rs
src/object_impls/: mod.rs  shm.rs  window.rs
src/protocol/: args.rs  event.rs  fixed.rs  id.rs  mod.rs
src/protocol_types/: fixed.rs  id.rs  mod.rs
src/socket_server/: buffer.rs  client.rs  mod.rs
