[package]
name = "myway"
version = "0.1.0"
edition = "2021"
description = "my personal Wayland compositor"

[dependencies]
clap = { version = "4.0.17", features = ["derive"] }
log = { version = "0.4.17", features = ["std"] }
nix = { version = "0.25.0", default-features = false, features = ["event", "signal", "socket", "uio"] }
slab = "0.4.7"
