[package]
name = "myway"
description = "my personal Wayland compositor"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
bitflags = "1.3.2"
clap = { version = "4.0.17", features = ["derive"] }
env_logger = "0.9.1"
log = { version = "0.4.17", features = ["std"] }
nix = { version = "0.25.0", default-features = false, features = ["event", "fs", "mman", "signal", "socket", "uio"] }
once_cell = "1.16.0"
slab = "0.4.7"

[build-dependencies]
myway-protogen = { path = "./myway-protogen" }

[workspace]
members = [
	"myway-protogen",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
